public/styles/site.scss
@import "site/variables";

// Bootstrap
// =========
// Bootstrap can be removed entirely by deleting this line.

@import "bootstrap/bootstrap";

// Site Styles
// ===========
// Add your own site style includes here

@import "site/fonts";
@import "site/mixins";
@import "site/layout";
@import "site/mobile";

body {
    background: url('/images/pon-pattern.png');
    font-family: 'Sporting Grotesque';
    font-smoothing: antialiased;
    -webkit-font-smoothing: antialiased;
	-moz-font-smoothing: antialiased;
	-o-font-smoothing: antialiased;
    text-rendering: geometricPrecision;
}

h1, .h1 {
	letter-spacing: -.0825em;
}

h2, .h2, h3, .h3 {
	margin: 25px 0 22.5px;
	letter-spacing: -.0775em;
}

sub, sup {
	font-size: 67.5%;
}

cite {
	font-family: 'ElektrixLight';
	font-size: 1.25em;
	font-weight: normal;
}

a {
	color: inherit;
	text-decoration: underline;
}


// Bootstrap overrides
.container {
	min-height: 110px;
}

.navbar {
	margin: 0;
}

.navbar-nav {
	min-height: 110px;
}

.navbar-nav > li > a {
    padding-bottom: 6.225px;
    text-decoration: none;
}

.btn {
	border-width: 3px;
}

.btn-lg {
	padding-bottom: 5px;
}

.btn-default:hover {
	background-color: $cyan;
	color: $magenta;
	border-color: $magenta;
}

.list-group-item {
	border-width: 3px;
	&:not(:last-child) {
		border-bottom-width: 0;
	}
}

.lead {
	letter-spacing: -.0375em;
}

.modal-header {
	border: none;
	.close {
		color: $magenta;
		opacity: 1;
		text-shadow: none;
	}
}

.modal-content {
	box-shadow: 0 0 0;
	color: $magenta;
	padding: 30px 15px;
	text-align: center;
	@include border(12px, $magenta, $magenta);
	a {
		background-color: $green;
		box-shadow:
		    inset 0 -0.175em $green,
		    inset 0 -0.2em $magenta;
		padding: 0 3.75px;
		text-decoration: none;
		&:hover {
			background-color: $magenta;
			box-shadow:
		    inset 0 -0.175em $magenta,
		    inset 0 -0.2em $cyan;
		}
	}
}

// Marquee3k
.marquee3k {
	overflow: hidden;
}

// Header
#header .navbar {
	padding: 0;
}

#logo {
	display: block;
}

#ppguy {
	background-image: url('/images/pon-guy-bg.png');
	background-size: 100.25%;
	background-origin: content-box;
	background-position: center;
	padding-left: 0;
	padding-right: 0;
}

#pplogo {
	padding-left: 0;
	padding-right: 0;
}

#mainNav {
	padding-left: 0;
	padding-right: 0;
	z-index: 3;
	li {
		background-color: #fff;
		color: #111;
		font-weight: bold;
		text-align: center;
		&:nth-child(even) {
			background-color: #111;
			color: #fff;
		} a {
			min-height: 110px;
			padding-top: 42.5px;
		}
	}
}

// Body
#body .container {
	margin: 0;
}
.page-title {
	color: #111;
}
.spacer {
	height: 330px;
	width: 330px;
	padding-left: 0;
	padding-right: 0;
}
.row-spacer {
	height: 1px;
	margin-top: -1px;
}

// Footer
#footer {
	background-color: #fff;
	color: #111;
	font-weight: bold;
	margin: 0;
	overflow: hidden;
	padding: 0;
	.credits {
		p {
			margin: 0;
			min-height: 110px;
			padding-top: 32px;
		} & :nth-child(odd):not(a) {
			background-color: #111;
			color: #fff;
			font-weight: normal;
		}
	}
	#addy {
		color: #fff;
		overflow: hidden;
		.org {
			background-color: #111;
			min-height: 110px;
			padding-top: 42.5px;
		} .adr {
			background-color: #fff;
			color: #111;
			font-weight: bold;
			min-height: 110px;
			padding-top: 42.5px;
		} .hrs {
			background-color: #111;
			font-weight: bold;
			min-height: 110px;
			padding-top: 42.5px;
		} .locality, .region, .postal-code, .country-name {
			// Hide these but leave visible for bots & screen readers
			clip: rect(0, 0, 0, 0);
			height: 0;
			overflow: hidden;
			position: absolute;
			width: 0;
			word-wrap: normal;
		}
	}
	#testimonials {
		background-color: #fff;
		color: #111;
		blockquote {
			border: none;
			font-size: inherit;
			font-weight: bold;
			margin-bottom: 0;
			min-height: 110px;
			padding-top: 42.5px;
			padding-right: 125px;
		}
		& :nth-child(even) {
			background-color: #111;
			color: #fff;
			font-weight: normal;
		}
	}
}

// Yellp Styles
.canvas-wrapper {
	padding-left: 0;
	padding-right: 0;
}

#canvasDiv {
	canvas {
		@include border(12px, $cyan, $yellow);
	}
}

#yellps {
	.latest-yellps {
		background-color: #111;
		max-width: 330px;
		min-height: 330px;
		padding: 0;
		&::before {
			content: '';
			position: absolute;
			@include triangle-up(330px, 165px, #fff);
		}
		h2 {
			margin: 4.5em auto 0 auto;
			padding: 0 1em;
			position: absolute;
			text-align: center;
		}
	}
	.yellp-img {
		@include border(12px, $magenta, $cyan);
		max-width: 330px;
		padding-left: 0;
		padding-right: 0;
		img {
			height: 306px;
			width: 306px;
		}
	}
	div:nth-child(4n):not(.spacer) { // every other yellp-img
		@include border(12px, $cyan, $magenta);
	}
	.more-yellps {
		@include egg(328px, 300px, #111);
		color: #fff;
		text-align: center;
		h2 { margin-top: 2em; }
	}
}

// Yellps archive
.yellps-archive {
	background-color: #111;
	min-height: 330px;
	padding: 0;
	&::before {
		content: '';
		position: absolute;
		@include triangle-right(330px, 165px, #fff);
	}
	h2 {
		margin: 2.5em auto 0 auto;
		padding: 0 .5em;
		position: absolute;
	}
}

// Blog
.post-head-1 {
	background: url('/images/pon-pon-favicon-lg.png');
}

.post-head-2 {
	background: url('/images/pon-pon-bar-bg.png');
}

.page-title {
	background: #fff url('/images/pon-guy-head-clear.jpg');
	background-repeat: no-repeat;
	margin: 0;
	min-height: 330px;
	max-width: 330px;
	padding: 1em 0 0;
}

#events {
	padding: 0;
}

// Events view (list view)
#eventsHeader {
	max-height: 330px;
	padding: 0;
}

.events-body {
	background-color: #fff;
	padding-bottom: 110px;
	img {
		margin-bottom: 15px;
	}
}

// Post view (single view)
#singlePost {
	padding: 0;
	header {
		max-height: 330px;
		padding: 0;
	} .post {
		background-color: #fff;
		padding-bottom: 110px;
	}
	img {
		margin-bottom: 15px;
	}
}

// Menu
#menu {
	padding: 0;
	.page-title {
		background: url('/images/pon-guy-head-img.jpg');
		background-size: 330px 330px;
		margin: 0;
		min-height: 330px;
		padding-top: 130px;
		text-align: center;
	}
	.menu-head-1 {
		background: url('/images/pon-cocktail.png');
		background-size: 330px 330px;
	}
	.menu-head-2 {
		background: url('/images/pon-texture-2.jpg');
		background-size: 330px 330px;
	}
}

.cocktail {
	background-color: $magenta;
}

.cocktail-header {
	background-color: #fff;
	border: 3px solid;
	font-weight: 600;
	font-size: 1.125em;
	letter-spacing: -.025em;
	margin-top: 18px;
	padding: 17.5px 16.75px 13.75px;
}

.cocktail-title {
	display: inline-block;
	letter-spacing: -.0325em;
	width: 82.5%;
}

.cocktail-price {
	color: #fff;
	display: inline-block;
	float: right;
	font-family: 'ElektrixLight';
	font-weight: normal;
	position: absolute;
	top: 41px;
	right: 34px;
	text-align: center;
	z-index: 1;
	&::before {
		background-color: #212121;
		border-radius: 90px;
		content: '';
		height: 45px;
		width: 45px;
		position: absolute;
		right: -10px;
		top: -4px;
		z-index: -1;
	}
}

.cocktail-desc {
	background-color: #fff;
	border-style: solid;
	border-width: 0 3px;
	padding: 17.5px 16.75px 0;
}

.cocktail-quote {
	background-color: #fff;
	border: 3px solid;
	border-top-width: 0;
	font-family: 'ElektrixLight', cursive;
	font-size: 1.375em;
	letter-spacing: -.0125em;
	line-height: 1.2857;
	margin-bottom: 18px;
	padding: 17.5px 16.75px 18.75px;
}

